--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,8 @@
 platform = espressif32
 board = ttgo-lora32-v1
 framework = arduino
-lib_deps = bodmer/TFT_eSPI@^2.5.31
+lib_deps = 
+	bodmer/TFT_eSPI@^2.5.31
+	knolleary/PubSubClient@^2.8
+	openenergymonitor/EmonLib@^1.1.0
+	paulstoffregen/Time@^1.6.1
