Alterações para incluir medição de temperatura e distância.

--- a/platformio.ini
+++ b/platformio.ini
@@ -25,7 +25,8 @@ build_flags =
 	-I$PIOPACKAGES_DIR/framework-arduinoespressif32/tools/sdk/include	
 upload_speed = 115200
 board_upload.flash_size = 16MB
-board_build.partitions = partitions_16MB.csv
+board_build.partitions = partitions.csv
 ;upload_protocol = espota
-;upload_port = 192.168.100.113
+;upload_port = 192.168.100.110
+;upload_port = 192.168.127.246
 
