Melhoria para OTA.

--- a/platformio.ini
+++ b/platformio.ini
@@ -26,7 +26,17 @@ build_flags =
 upload_speed = 115200
 board_upload.flash_size = 16MB
 board_build.partitions = partitions_16MB.csv
-upload_protocol = esptool   ; espota | esptool
-upload_port = COM8          ; COMx   | 192.168.1.100
+
+; === CONFIGURAÇÃO OTA (Over-The-Air) ===
+upload_protocol = espota
+upload_port = 192.168.100.108
+upload_flags = 
+    --port=3232
+    --auth=
+    --debug
+
+; === PARA UPLOAD VIA CABO USB, COMENTE ACIMA E DESCOMENTE ABAIXO: ===
+; upload_protocol = esptool
+; upload_port = COM10
 
 
