Inclusão do sensor de temperatura DS18B20. (não validado).

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,6 +21,9 @@ lib_deps =
 	openenergymonitor/EmonLib@^1.1.0
 	mustafakemalgilor/tdslite@^0.8.0	
 	adafruit/DHT sensor library@^1.4.6
+	adafruit/Adafruit MLX90614 Library@^2.1.3
+	milesburton/DallasTemperature@^3.11.0
+	paulstoffregen/OneWire@^2.3.7
 build_flags = 
 	-I$PIOPACKAGES_DIR/framework-arduinoespressif32/tools/sdk/include	
 upload_speed = 115200
@@ -28,15 +31,16 @@ board_upload.flash_size = 16MB
 board_build.partitions = partitions_16MB.csv
 
 ; === CONFIGURAÇÃO OTA (Over-The-Air) ===
-upload_protocol = espota
-upload_port = 192.168.100.108
-upload_flags = 
-    --port=3232
-    --auth=
-    --debug
+;upload_protocol = espota
+;upload_port = 192.168.100.108
+;upload_flags = 
+ ;   --port=3232
+  ;  --auth=
+   ; --timeout=40
+   ; --debug
 
 ; === PARA UPLOAD VIA CABO USB, COMENTE ACIMA E DESCOMENTE ABAIXO: ===
-; upload_protocol = esptool
-; upload_port = COM10
+ ;upload_protocol = esptool
+ ;upload_port = COM8
 
 
