--- a/platformio.ini
+++ b/platformio.ini
@@ -8,9 +8,9 @@
 ; Please visit documentation for the other options and examples			vshymanskyy/Preferences@^2.1.0
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:lilygo-t-display]
+; === Configurações comuns para todas as placas ===
+[env]
 platform = espressif32
-board = lilygo-t-display
 framework = arduino
 lib_deps = 
 	bodmer/TFT_eSPI@^2.5.31
@@ -24,11 +24,114 @@ lib_deps =
 	adafruit/Adafruit MLX90614 Library@^2.1.3
 	milesburton/DallasTemperature@^3.11.0
 	paulstoffregen/OneWire@^2.3.7
-build_flags = 
-	-I$PIOPACKAGES_DIR/framework-arduinoespressif32/tools/sdk/include	
 upload_speed = 115200
 board_upload.flash_size = 16MB
 board_build.partitions = partitions_16MB.csv
+
+; === TTGO T-Display (ESP32 com ST7789 135x240) ===
+[env:ttgo-t-display]
+board = lilygo-t-display
+build_flags = 
+	-I$PIOPACKAGES_DIR/framework-arduinoespressif32/tools/sdk/include
+	-D USER_SETUP_LOADED=1
+	-D TTGO_T_DISPLAY
+	-D ST7789_DRIVER=1
+	-D TFT_WIDTH=135
+	-D TFT_HEIGHT=240
+	-D TFT_MISO=-1
+	-D TFT_MOSI=19
+	-D TFT_SCLK=18
+	-D TFT_CS=5
+	-D TFT_DC=16
+	-D TFT_RST=23
+	-D TFT_BL=4
+	-D TFT_BACKLIGHT_ON=1
+	-D LOAD_GLCD=1
+	-D LOAD_FONT2=1
+	-D LOAD_FONT4=1
+	-D LOAD_FONT6=1
+	-D LOAD_FONT7=1
+	-D LOAD_FONT8=1
+	-D LOAD_GFXFF=1
+	-D SMOOTH_FONT=1
+	-D SPI_FREQUENCY=40000000
+	-D SPI_READ_FREQUENCY=20000000
+
+; === LilyGo T-Display S3 (ESP32-S3 com ST7789 170x320 - PARALLEL 8-BIT) ===
+[env:lilygo-t-display-s3]
+board = esp32-s3-devkitc-1
+board_build.mcu = esp32s3
+board_build.f_cpu = 240000000L
+board_build.flash_mode = qio
+upload_speed = 921600
+monitor_speed = 115200
+build_flags = 
+	-I$PIOPACKAGES_DIR/framework-arduinoespressif32/tools/sdk/include
+	-D USER_SETUP_LOADED=1
+	-D LILYGO_T_DISPLAY_S3
+	-D ST7789_DRIVER=1
+	-D INIT_SEQUENCE_3=1
+	-D CGRAM_OFFSET
+	-D TFT_RGB_ORDER=TFT_RGB
+	-D TFT_INVERSION_ON=1
+	-D TFT_PARALLEL_8_BIT=1
+	-D TFT_WIDTH=170
+	-D TFT_HEIGHT=320
+	-D TFT_CS=6
+	-D TFT_DC=7
+	-D TFT_RST=5
+	-D TFT_WR=8
+	-D TFT_RD=9
+	-D TFT_D0=39
+	-D TFT_D1=40
+	-D TFT_D2=41
+	-D TFT_D3=42
+	-D TFT_D4=45
+	-D TFT_D5=46
+	-D TFT_D6=47
+	-D TFT_D7=48
+	-D TFT_BL=38
+	-D TFT_BACKLIGHT_ON=HIGH
+	-D LOAD_GLCD=1
+	-D LOAD_FONT2=1
+	-D LOAD_FONT4=1
+	-D LOAD_FONT6=1
+	-D LOAD_FONT7=1
+	-D LOAD_FONT8=1
+	-D LOAD_GFXFF=1
+	-D SMOOTH_FONT=1
+	-D ARDUINO_USB_MODE=1
+	-D ARDUINO_USB_CDC_ON_BOOT=1
+	-D CORE_DEBUG_LEVEL=3
+
+; === AMBIENTE PADRÃO (mantido por compatibilidade) ===
+[env:lilygo-t-display]
+board = lilygo-t-display
+build_flags = 
+	-I$PIOPACKAGES_DIR/framework-arduinoespressif32/tools/sdk/include
+	-D USER_SETUP_LOADED=1
+	-D TTGO_T_DISPLAY
+	-D ST7789_DRIVER=1
+	-D TFT_WIDTH=135
+	-D TFT_HEIGHT=240
+	-D TFT_MISO=-1
+	-D TFT_MOSI=19
+	-D TFT_SCLK=18
+	-D TFT_CS=5
+	-D TFT_DC=16
+	-D TFT_RST=23
+	-D TFT_BL=4
+	-D TFT_BACKLIGHT_ON=1
+	-D LOAD_GLCD=1
+	-D LOAD_FONT2=1
+	-D LOAD_FONT4=1
+	-D LOAD_FONT6=1
+	-D LOAD_FONT7=1
+	-D LOAD_FONT8=1
+	-D LOAD_GFXFF=1
+	-D SMOOTH_FONT=1
+	-D SPI_FREQUENCY=40000000
+	-D SPI_READ_FREQUENCY=20000000
 
 ; === CONFIGURAÇÃO OTA (Over-The-Air) ===
 ;upload_protocol = espota
