--- a/platformio.ini
+++ b/platformio.ini
@@ -104,42 +104,13 @@ build_flags =
 	-D ARDUINO_USB_CDC_ON_BOOT=1
 	-D CORE_DEBUG_LEVEL=3
 
-; === AMBIENTE PADRÃO (mantido por compatibilidade) ===
-[env:lilygo-t-display]
-board = lilygo-t-display
-build_flags = 
-	-I$PIOPACKAGES_DIR/framework-arduinoespressif32/tools/sdk/include
-	-D USER_SETUP_LOADED=1
-	-D TTGO_T_DISPLAY
-	-D ST7789_DRIVER=1
-	-D TFT_WIDTH=135
-	-D TFT_HEIGHT=240
-	-D TFT_MISO=-1
-	-D TFT_MOSI=19
-	-D TFT_SCLK=18
-	-D TFT_CS=5
-	-D TFT_DC=16
-	-D TFT_RST=23
-	-D TFT_BL=4
-	-D TFT_BACKLIGHT_ON=1
-	-D LOAD_GLCD=1
-	-D LOAD_FONT2=1
-	-D LOAD_FONT4=1
-	-D LOAD_FONT6=1
-	-D LOAD_FONT7=1
-	-D LOAD_FONT8=1
-	-D LOAD_GFXFF=1
-	-D SMOOTH_FONT=1
-	-D SPI_FREQUENCY=40000000
-	-D SPI_READ_FREQUENCY=20000000
-
 ; === CONFIGURAÇÃO OTA (Over-The-Air) ===
-;upload_protocol = espota
-;upload_port = 192.168.100.108
-;upload_flags = 
- ;   --port=3232
-  ;  --auth=
-   ; --timeout=40
+upload_protocol = espota
+upload_port = 192.168.1.9
+upload_flags = 
+    --port=3232
+    --auth=
+    --timeout=40
    ; --debug
 
 ; === PARA UPLOAD VIA CABO USB, COMENTE ACIMA E DESCOMENTE ABAIXO: ===
